--- a/entries/entry1/index.html
+++ b/entries/entry1/index.html
@@ -5,29 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 
-    <title>Text alignment</title>
-    <style>
-        h1{text-align: center;}
-    </style>
 </head>
 <body>
-     <h2>ENTRY #1</h2>
-  <img src="imgs/lamp.png" width="500" height="600">
-  <h5 align="center">in the light of a tiffany lamp</h5>
 
-  <img src="imgs/breakfast.png" width="500" height="700">
-  <h5>early in the morning pouring my coffee</h5>
+  <head>
+    <link rel="stylesheet" href="https://use.typekit.net/prh7slm.css">
+</head>
 
-  <img src="imgs/building.PNG" width="500" height="700">
-  <h5>look up!</h5>
+<h1>10/12/2022</h1> 
 
-  <img src="imgs/paintings.PNG" width="700" height="1000">
-  <h5 align="center">be kind to art</h5>
+<h1>7:46-11:53 AM</h1>
+<br>
 
-  <img src="imgs/ducks.png" width="700" height="700">
-  <h5>thank you for coming</h5>
+<div class="row">
+  <div class="column">
+    <img src="imgs/collage.png" style="width:100%">
+  </div>
+  <div class="column">
+<br>
+<br>
+<br>
+<br>
+<h2>in the light of a tiffany lamp</h2>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h3>early morning pouring coffee</h3>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2>look up!</h2>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h3>be kind to art</h3>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2>thank you for coming</h2>
+  </div>
+</div>
 
-  <br>
+ 
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
