--- a/entries/entry3/index.html
+++ b/entries/entry3/index.html
@@ -7,20 +7,52 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 
+</head>
+<body>
+    
     <head>
-    <link rel="stylesheet" href="https://use.typekit.net/rgl4aay.css">
+        <link rel="stylesheet" href="https://use.typekit.net/prh7slm.css">
     </head>
 
+    <div class="container">
+        <h2 class="title">
+          <span class="title-word title-word-1">WE'RE</span>
+          <span class="title-word title-word-2">ALWAYS</span>
+          <span class="title-word title-word-3">CHANGING</span>
+        </h2>
+      </div>
 
-<body> 
-    <h1>i wish i could predict the weather </h1>
-    <h2>the next time i will see you.</h2>  
-    <h3> i can’t because next time </h3>  
-    <h4>is too long from now,</h4>
-    <h5>but i hope the sun is shining </h5>
-    <h6>where you are.</h6>
+      <br>
+      <br> 
+    
+<h2>As I adjust to my new world I grow a little bit
+    <br>
+    <br>
+    but my root system always tethers me 
+    <br>
+    <br>
+    to the beautiful  
+    <br>
+    <br>
+    that unlike me, will never change
+    <br>
+    <br>
+    what will come of the moment after this 
+    <br>
+    <br>
+    and the one after that?
+    <br>
+    <br>
+    we're always changing
+    <br>
+    <br>
+    and what a beautiful way to be 
+</h2>
+<br>
+<br>
+<br>
+
+<img src="imgs/butterfly.PNG" alt="butterfly" style="width:50%;">
+
 </body>
-
-<img  src="imgs/green.gif" class="center" >
-
 </html>
