--- a/entries/entry4/index.html
+++ b/entries/entry4/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="style.css">
 
     <head>
-        <link rel="stylesheet" href="https://use.typekit.net/rgl4aay.css">
-        </head>
+      <link rel="stylesheet" href="https://use.typekit.net/prh7slm.css">
+  </head>
 
 
 </head>
@@ -46,7 +46,7 @@
   </div>
 </div>
 
-<h1>When I'm grateful</h1>
+<h2>When I'm grateful</h2>
 
 <div class="row">
     <div class="column">
@@ -80,7 +80,7 @@
   </div>
 </div>
 
-<h1>When I miss you</h1>
+<h2>When I miss you the most</h2>
 <div class="row">
     <div class="column">
       <img src="imgs/IMG_4479.PNG" style="width:100%">
