--- a/entries/entry5/index.html
+++ b/entries/entry5/index.html
@@ -24,49 +24,39 @@
           <img src="imgs/enjoy.GIF" style="width:100%">
         </div>
         <div class="column">
-            <img src="imgs/flowers.GIF" style="width:68.3%">
-          </div>
-        <div class="column">
-          <img src="imgs/night city.GIF" alt="Forest" style="width:150%">
+        <img src="imgs/1blue.GIF" style="width:100%">
         </div>
         <div class="column">
-          <img src="imgs/food.GIF" alt="Mountains" style="width:68.3%">
-        </div>
+            <img src="imgs/2blue.GIF" style="width:100%">
+            </div>
       </div>
 
 
       <div class="row">
-  <div class="column">
-    <img src="imgs/colorado.GIF" style="width:68.3%">
-  </div>
-  <div class="column">
-    <img src="imgs/buildingsky.GIF" alt="Forest" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="imgs/the.GIF" alt="Mountains" style="width:100%">
-  </div>
-  <div class="column">
-    <img src="imgs/market.GIF" style="width:68.3%">
-  </div>
-</div>
-
-
-<div class="row">
-    <div class="column">
-      <img src="imgs/treebuilding.GIF" style="width:100%">
-    </div>
-    <div class="column">
-      <img src="imgs/littlethings.GIF" alt="Forest" style="width:100%">
-    </div>
-    <div class="column">
-      <img src="imgs/coffee.GIF" alt="Mountains" style="width:68.3%">
-    </div>
-    <div class="column">
-        <img src="imgs/palmtrees.GIF" style="width:100%">
+        <div class="column">
+          <img src="imgs/3blue.GIF" style="width:100%">
+        </div>
+        <div class="column">
+        <img src="imgs/the.GIF" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="imgs/4blue.GIF" style="width:100%">
+            </div>
       </div>
-  </div>
 
-  <div id="navigationContainer">
+
+      <div class="row">
+        <div class="column">
+          <img src="imgs/5blue.GIF" style="width:100%">
+        </div>
+        <div class="column">
+        <img src="imgs/6blue.GIF" style="width:100%">
+        </div>
+        <div class="column">
+            <img src="imgs/littlethings.GIF" style="width:100%">
+            </div>
+      </div>
+
 
 </body>
 </html>
