--- a/index.html
+++ b/index.html
@@ -9,36 +9,61 @@
 </head>
 
 <head>
-  <link rel="stylesheet" href="https://use.typekit.net/rgl4aay.css">
-  </head>
-
-<body>
-<h1>THE</h1>
-<h1>Happiness</h1>  
-<h1> PROJECT</h1>
-
-<img  src=imgs/tulip.PNG class="right" >
+  <link rel="stylesheet" href="https://use.typekit.net/prh7slm.css">
+</head>
 
 
- <section>
+    <h1>THE</h1>
+    <h2>Happiness</h2>  
+    <h1> PROJECT</h1>
+    <br>
+    <br>
+    <br>
+    <br>
+    <h3> <a href="entries/entry1/index.html">ENTRY #1</a></h3>
+    <br>
+    <br>
+    <h3> <a href="entries/entry2/index.html">ENTRY #2</a></h3>
+    <br>
+    <br>
+    <h3> <a href="entries/entry3/index.html">ENTRY #3</a></h3>
+    <br>
+    <br>
+    <h3> <a href="entries/entry4/index.html">ENTRY #4</a></h3>
+    <br>
+    <br>
+    <h3> <a href="entries/entry5/index.html">ENTRY #5</a></h3>
+    <br>
+    <br>
+    <h3> <a href="entries/entry6/index.html">ABOUT</a></h3>  
 
-  <br>
-  <br>
-   <h2> <a href="entries/entry1/index.html">ENTRY #1</a></h2>
-   <br>
-   <br>
-   <h2> <a href="entries/entry2/index.html">ENTRY #2</a></h2>
-   <br>
-   <br>
-   <h2> <a href="entries/entry3/index.html">ENTRY #3</a></h2>
-   <br>
-   <br>
-   <h2> <a href="entries/entry4/index.html">ENTRY #4</a></h2>
-   <br>
-   <br>
-   <h2> <a href="entries/entry5/index.html">ENTRY #5</a></h2>
-
- </section>
 
 
- 
+
+
+
+
+
+
+
+  <img  src=imgs/tulip.PNG class="right" width="30%">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
