--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <h3> <a href="entries/entry5/index.html">ENTRY #5</a></h3>
     <br>
     <br>
+    <h3> <a href="entries/entry6/index.html">ENTRY #6</a></h3>  
+    <br>
+    <br>
     <h3> <a href="entries/entry6/index.html">ABOUT</a></h3>  
 
 
